# aether

./: .gitignore  README.md
aether-cli/: .gitignore  Cargo.toml
aether-cli/src/: constants.rs  errors.rs  main.rs
aether-cli/src/commands/: add_command.rs  init_command.rs
aether-cli/src/model/: mod.rs  project_models.rs
aether-node/: config.toml  go.mod  go.sum  scenes.json
aether-node/cmd/aether/: main.go
aether-node/internal/api/: api.go  commit.go  routes.go  upload.go
aether-node/internal/banner/: banner.go
aether-node/internal/checksum/: checksum.go
aether-node/internal/config/: config.go
aether-node/internal/dto/id/: id_request.go
aether-node/internal/dto/progress/: status_response.go
aether-node/internal/dto/render/: render_request.go
aether-node/internal/dto/scenes/: scenes_response.go
aether-node/internal/models/: render_request.go
aether-node/internal/node/: node.go
aether-node/internal/persistence/: scene_index.go
aether-node/internal/rendering/: render_job.go
aether-node/internal/state/: color.go  state.go
aether-node/internal/util/: color.go  utility.go
aether-node/internal/version/: version.go
aether-node/pkg/dtos/: id_request.go  render_request.go  scenes_response.go  status_response.go
aether-node/static/: index.html
aetherd/: go.mod
aetherd/cmd/aetherd/: main.go
aetherd/internal/constants/: constants.go
aetherd/internal/dto/: dto.go
aetherd/internal/server/: server.go
aetherd/internal/storage/: model.go  storage.go
aetherd/pkg/dtos/: dto.go
